# nightshift-opi

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
apps/backend/: main.py
contracts/uart/: commands.yaml  golden_vectors.json
deploy/systemd/: nightshift-backend.service
nightshift/: __init__.py  config.py
nightshift/domain/: commands.py  events.py  models.py  state_machine.py
nightshift/hardware/gpio/: adapter.py  config.py  debounce.py
nightshift/hardware/uart/: __init__.py  codec.py  gateway.py  protocol.py
nightshift/integrations/: __init__.py
nightshift/integrations/mqtt/: __init__.py  client.py  command_handler.py  config.py  publisher.py  schemas.py  topics.py
nightshift/services/: orchestrator.py
tools/: t5_display_monitor.py  verify_wiring.py
