[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nightshift-opi"
version = "0.1.0"
description = "Nightshift Orange Pi 5B control service"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyserial-asyncio>=0.6",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
gpio = ["gpiod>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nightshift*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
